# sopa

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-python-env/: action.yaml
.github/workflows/: ci.yml  docker_push.yml
api/_sdata/: _sdata.md  index.html
api/aggregation/: index.html
api/annotation/: index.html
api/annotation/fluorescence/: fluorescence.md  index.html
api/annotation/tangram/: index.html  tangram.md
api/embedding/: embedding.md  index.html
api/io/: index.html
api/io.explorer/: index.html  io.explorer.md
api/io.report/: index.html  io.report.md
api/misc/: index.html
api/patches/: index.html
api/readers/: index.html
api/segmentation/: index.html
api/segmentation/aggregate/: aggregate.md  index.html
api/segmentation/baysor/: index.html
api/segmentation/methods/: index.html
api/segmentation/patching/: index.html
api/segmentation/shapes/: index.html  shapes.md
api/spatial/: index.html  spatial.md
api/stats/: index.html
api/utils/: index.html
api/utils/image/: image.md  (+1 more)
cite_us/: cite_us.md  index.html
cli/: cli.md  index.html
config/ihc_prism/: config_v0.toml
css/: custom.css  termynal.css
docker/: README.md
docker/sopa/: Dockerfile
docker/sopa-baysor/: Dockerfile
docker/sopa-cellpose/: Dockerfile
docker/sopa-comseg/: Dockerfile
docker/sopa-proseg/: Dockerfile
docker/sopa-stardist/: Dockerfile
docker/sopa-tangram/: Dockerfile
docker/sopa_stardist/: Dockerfile
docs/: README.md  cite_us.md  cli.md  faq.md  getting_started.md  index.md  pipeline.md  toy.md
docs/api/: _sdata.md  aggregation.md  annotation.md  embedding.md  io.explorer.md  io.md  misc.md  patches.md  readers.md  segmentation.md  spatial.md  stats.md  utils.md
docs/js/: custom.js
docs/tutorials/: advanced_api_usage.ipynb  advanced_segmentation.md  align.ipynb  align.md  api_usage.ipynb  api_usage.md  cli_other_segmentation.md  cli_usage.md  compare_segmentations.ipynb  comseg.ipynb  custom_segmentation.ipynb  explorer.ipynb  he.ipynb  he_test.ipynb  image_test_matrix.csv  multi_step_segmentation.md  old_api_usage.ipynb  other_segmentations.ipynb  snakemake.md  spatial.ipynb  techno_specific.md  visium_hd.ipynb
faq/: faq.md  index.html
getting_started/: getting_started.md  index.html
js/: custom.js
pipeline/: index.html
search/: search_index.json
sopa/: __init__.py  _constants.py  _logging.py  _sdata.py  _settings.py  constants.py  main.py  patching.py
sopa/aggregation/: __init__.py  _nimbus.py  aggregation.py  bins.py  channels.py  nimbus.py  overlay.py  table.py  transcripts.py
sopa/annotation/: __init__.py  fluorescence.py
sopa/cli/: annotate.py  app.py  check.py  explorer.py  patchify.py  read.py  resolve.py  segmentation.py  utils.py
sopa/embedding/: __init__.py  cluster.py  patches.py
sopa/io/: __init__.py  _openslide_store.py  baysor.py  histopathology.py  imaging.py  qptif.py  qptiff.py  standardize.py  transcriptomics.py
sopa/patches/: __init__.py  _factory.py  _inference.py  _patches.py  _transcripts.py  cluster.py  factory.py  infer.py  loader.py  patches.py  transcripts.py
sopa/segmentation/: __init__.py  _aggregation.py  _stainings.py  _tissue.py  _transcripts.py  aggregate.py  aggregation.py  main.py  methods.py  nucleus.py  patching.py  resolve.py  shapes.py  stainings.py  tiling.py  tissue.py  transcripts.py  update.py  utils.py
sopa/shapes/: __init__.py  _expand.py  _rasterize.py  _validate.py  _vectorize.py  expand.py  validate.py
sopa/spatial/: __init__.py  _build.py  _graph.py  build.py  distance.py  join.py  morpho.py  utils.py
sopa/stats/: __init__.py  _build.py  _graph.py  distance.py  morpho.py
sopa/utils/: __init__.py  _spatialdata.py  annotation.py  check_reference.py  crop.py  data.py  image.py  io.py  polygon_crop.py  tiling.py  utils.py
tests/: compare_cv2_skimage.py  mask_example.npy  test_aggregation.py  test_converter.py  test_dummy.py  test_embeddings.py  test_geometrize.py  test_instance.py  test_patches.py  test_raster_polygons.py  test_rasterization.py  test_rasterize.py  test_rasterize_geometries.py  test_segmentation.py  test_shapes.py  test_spatial_operations.py  test_spatial_stats.py  test_toy_datasets.py  test_toy_snakemake.sh  test_transformations.py  test_utils.py  test_vectorization.py  test_vectorize.py  test_wsi.py  test_wsi_backends.py  test_wsi_embeddings.py  toy_tangram_ref.h5ad
toy/: index.html
tutorials/advanced_segmentation/: index.html
tutorials/align/: align.ipynb  index.html
tutorials/api_usage/: api_usage.ipynb  index.html
tutorials/cli_usage/: cli_usage.md  index.html
tutorials/compare_segmentations/: compare_segmentations.ipynb  index.html
tutorials/comseg/: comseg.ipynb  index.html
tutorials/custom_segmentation/: index.html
tutorials/he/: he.ipynb  index.html
tutorials/multi_step_segmentation/: index.html
tutorials/old_api_usage/: index.html
tutorials/other_segmentations/: index.html
tutorials/snakemake/: index.html
tutorials/spatial/: index.html  spatial.ipynb
tutorials/techno_specific/: index.html
tutorials/visium_hd/: index.html  visium_hd.ipynb
tutorials/xenium_explorer/: Selection_1_coordinates.csv  coordinates.csv
workflow/: README.md  Snakefile  Snakefile_post_resolve  _Snakefile  config.json  utils.py  validation.py
workflow/config/: README.md  blobs.yaml  blobs_cb.yaml  config.yaml  example.yaml  example_commented.yaml  merscope.yaml  merscope_cb.yaml  merscope_cb_liver.yaml  merscope_tg_breast.yaml  merscope_tg_thyroid.yaml  multiplex.yaml  uniform_cb.yaml
workflow/profile/: README.md
workflow/rules/: baysor.smk  cellpose.smk  comseg.smk  proseg.smk  stardist.smk  utils.smk
workflow/slurm/: README.md  config.yaml
workflow/src/: __init__.py  args.py  constants.py  paths.py  to_spatatial_visium_hd.py  validation.py
workflows/IHC/: Snakefile
(+212 files in other folders)
