[tool.poetry]
name = "sopa"
version = "1.0.11"
description = "Spatial-omics pipeline and analysis"
documentation = "https://gustaveroussy.github.io/sopa"
homepage = "https://gustaveroussy.github.io/sopa"
repository = "https://github.com/gustaveroussy/sopa"
authors = ["Quentin Blampey <quentin.blampey@gmail.com>"]
packages = [{ include = "sopa" }]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.scripts]
sopa = "sopa.main:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
spatialdata = ">=0.1.2"
spatialdata-io = ">=0.1.2"
scanpy = ">=1.9.5,!=1.9.7"
botocore = "1.34.19"
typer = ">=0.9.0"
setuptools = ">=69.2.0"

cellpose = { version = ">=3.0.5", optional = true }
opencv-python = { version = ">=4.8.0.76", optional = true }
torch = { version = ">=2.0.0, !=2.0.1, !=2.1.0", optional = true }
toml = { version = ">=0.10.2", optional = true }
loompy = { version = ">=3.0.7", optional = true }
tangram-sc = { version = ">=1.0.4", optional = true }
snakemake = { version = "^7.32.4,<8.1.3", optional = true }
pulp = { version = "^2.3.1,<2.8", optional = true }
tiffslide = { version = "^2.3.1", optional = true }

black = { version = "^22.8.0", optional = true }
isort = { version = "^5.10.1", optional = true }
pytest = { version = "^7.1.3", optional = true }
ipykernel = { version = "^6.25.2", optional = true }
mkdocs-material = { version = "^9.3.2", optional = true }
mkdocs-jupyter = { version = "^0.24.6", optional = true }
mkdocstrings = { version = "^0.23.0", optional = true }
mkdocstrings-python = { version = "^1.7.3", optional = true }
flake8 = { version = "^7.0.0", optional = true }

[tool.poetry.extras]
cellpose = ["cellpose", "opencv-python", "torch"]
baysor = ["toml", "loompy"]
tangram = ["tangram-sc"]
snakemake = ["snakemake", "pulp"]
wsi = ["tiffslide", "opencv-python", "torch"]
dev = [
  "black",
  "isort",
  "pytest",
  "ipykernel",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-jupyter",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/__init__.py"]
